--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 	27017 // MongoDB
 	],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "sh ~/workspace/vscs-dev/.devcontainer/install-vscs.sh"
+	"postCreateCommand": "sh ~/workspace/vscs-dev/.devcontainer/install-vscs.sh",
+	//"postCreateCommand": "echo --------> HELLO-VSCS",
 	// Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode"
 }
